--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -702,14 +702,16 @@ With these improved types our template doesn't change a lot, but the user experi
 
 The new template, thoroughly tested for user experience, will soon turn out to be good enough. But user experience is not the only way of checking whether the template makes sense. In our case, we could have arrived at the same conclusions from a completely different angle, which I will call \textit{evidence-based programming}\footnote{This is a term coined in this thesis.}. It roughly corresponds to the part of our abstract about ``representing flow of information in a proof (or program) using types''.
 
-Before we see how to use this new concept to improve our original template, we first have to meet its relatives: \textit{boolean blindness}\footnote{This is an informal term used in the functional programming blogosphere. It was coined most likely by Dan Licata in his lecture notes for an introductory functional programming class \cite{BBLicata}. See \cite{BBHarper} for a philosophical presentation, \cite{BBHXA} for a critique of the former viewpoint and \cite{BBFairbank} for a more software-engineering-oriented discussion.}, a dangerous disease which can afflict even the best functional programmers, and \textit{small-scale reflection}\footnote{See \cite{SSR1} for an implementation of a proof language for Coq which is based on this methodology and \cite{SSR2} for its documentation. Also see \cite{MCB}, a book about a library of formalized mathematics done in Coq which uses the small scale reflection methodology.}, a general-purpose proof engineering methodology most famously applied to the first fully formal proof of the four colour theorem \cite{4CT1} \cite{4CT2}.
+Before we see how to use this new concept to improve our original template, we first have to meet its relatives: \textit{boolean blindness}, a dangerous disease which often afflict programmers trasitioning from imperative to functional, and \textit{small-scale reflection}\footnote{See \cite{SSR1} for an implementation of a proof language for Coq which is based on this methodology and \cite{SSR2} for its documentation. Also see \cite{MCB}, a book about a library of formalized mathematics done in Coq which uses the small scale reflection methodology.}, a general-purpose proof engineering methodology most famously applied to the first fully formal proof of the four colour theorem \cite{4CT1} \cite{4CT2}.
 
-Boolean blindness is a term s
+``Boolean blindness'' is an informal term used in the functional programming blogosphere to describe a few unrelated programming misconceptions and antipatterns. It was coined by Dan Licata in his lecture notes for an introductory functional programming class \cite{BBLicata}. See \cite{BBHarper} for a philosophical presentation, \cite{BBHXA} for a critique of the former viewpoint and \cite{BBFairbank} for a more software-engineering-oriented discussion. It was applied to describe, among others, the following things:
 
+\begin{itemize}
+    \item The misconception, held by many (mostly imperative) programmers and (mostly classical) mathematicians, that booleans and propositions are the same thing, 
+    \item A bad programming practice, in which any concept that can take one of two values is represented using the boolean type. This decreases code readability, because in a call like \m{f\ true} it's not obvious what the \m{true} stands for, and one has to consult documentation or the function's definition to learn that, for example, the first argument of \m{f} is named \m{isAdmin}. Another consequence stemming from this practice is lowered code extensibility: when the business logic changes (e.g. users can now have one of three statuses: ``admin'', ``premium'', ``regular''; instead of the previous two: ``admin'' and ``non-admin''), it requires a huge refactoring (which can, if performed badly, lead to the third form of boolean blindness described below) instead of changing a custom type in just a few places.
+    \item A horrible antipattern in which boolean tests are used instead of pattern matching. An example in Coq would be writing \m{if isSome x then f (unwrapSome x) else y} instead of \m{match x with | Some x' => f x' | None => y end}, where \m{unwrapSome : forall A : Type, option A -> A}. If Coq accepted such code, we could easily derive a contradiction, because \m{unwrapSome False None} is a proof of \m{False}. Fortunately it is not possible to write such code in Coq, because Coq won't allow us to implement \m{unwrapSome}. A less ominous example would be writing \m{if isZero n then x else f (pred n)} instead of \m{match n with | 0 => x | S n' => f n' end}, where \m{pred : nat -> nat} is the predecessor function on naturals. It does not lead to contradiction, but doubles the amount of pattern matching needed: 
+\end{itemize}
 
-% 1. Names: isPremium = true
-% 2. Errors: unSome False None : False
-% 3. Bad: if isZero n then ... else ...
 % 4. Recoverable using SSR
 
 
